--- a/.env
+++ b/.env
@@ -1,4 +1,15 @@
-MONGO_URI=mongodb://localhost:27017/
+# .env.production (para produção/Vercel)
+MONGO_URI=mongodb+srv://clinicapet:clinicapet@clinicapet.wp2nb.mongodb.net/
 JWT_SECRET=sua_chave_secreta_aqui
 EMAIL_USER=clinicapet04@gmail.com
 EMAIL_PASS=bcqj ifbk okrq vvzg
+NODE_ENV=production
+
+
+
+# .env.development (para desenvolvimento local)
+MONGO_URI=mongodb+srv://clinicapet:clinicapet@clinicapet.wp2nb.mongodb.net/
+JWT_SECRET=sua_chave_secreta_aqui
+EMAIL_USER=clinicapet04@gmail.com
+EMAIL_PASS=bcqj ifbk okrq vvzg
+NODE_ENV=development
