--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@
 MONGO_URI=mongodb+srv://clinicapet:clinicapet@clinicapet.wp2nb.mongodb.net/
 JWT_SECRET=sua_chave_secreta_aqui
 EMAIL_USER=clinicapet04@gmail.com
-EMAIL_PASS=bcqj ifbk okrq vvzg
+EMAIL_PASS=pusg amgv txhb xgrg
 NODE_ENV=production
 
 
 
 # .env.development (para desenvolvimento local)
-MONGO_URI=mongodb+srv://clinicapet:clinicapet@clinicapet.wp2nb.mongodb.net/
+MONGO_URI=mongodb://localhost:27017/
 JWT_SECRET=sua_chave_secreta_aqui
 EMAIL_USER=clinicapet04@gmail.com
-EMAIL_PASS=bcqj ifbk okrq vvzg
+EMAIL_PASS=pusg amgv txhb xgrg
 NODE_ENV=development
