--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ NODE_ENV=production
 
 
 # .env.development (para desenvolvimento local)
-MONGO_URI=mongodb://localhost:27017/
+MONGO_URI=mongodb+srv://clinicapet:clinicapet@clinicapet.wp2nb.mongodb.net/
 JWT_SECRET=sua_chave_secreta_aqui
 EMAIL_USER=clinicapet04@gmail.com
 EMAIL_PASS=pusg amgv txhb xgrg
